--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>The Eclipse Database</title>
   </head>
-
+<body>
+  <h1> Welcome Silverwings to your new database.</h1>
+  <p>STAND BY</p>
+</body>
 
 
 </html>
