--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
 <body>
   <h1> Welcome Silverwings to your new database.</h1>
-  <p>STAND BY</p>
+  <p>STAND BY...STAND BY...</p>
+<h2>Athorization code required. SCANNING. HOLD STILL PLEASE.</h2>
 </body>
 
 
