--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
-<h2>Athorization code required. SCANNING. HOLD STILL PLEASE.</h2>
+<h2>Authorization code required. SCANNING. HOLD STILL PLEASE.</h2>
 </body>
 
 
