--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>The Eclipse Database</title>
   </head>
-<body>
+<body style=" backround-color:cyan;">
   <h1> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
