--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>The Eclipse Database</title>
   </head>
 <body style=" backround-color:cyan;">
-  <h1> Welcome Silverwings to your new database.</h1>
+  <h1 style= "font-size: 60px;"> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
   <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED</p>
