--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1 style= "font-size: 60px;"> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
-  <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED</p>
+  <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED. AD: TRY TOYOTA TODAY NO WAIT SORRY I MEANT TOY YODA'S. SORRY A 17 YEAR OLD IS MAKING THIS.</p>
 </body>
 
 
