--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>The Eclipse Database</title>
   </head>
-<body style="background-color:cyan;">
+<body style="background-color:grey;">
   <h1 style= "font-size: 60px;"> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
-  <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED. AD: TRY TOYOTA TODAY NO WAIT SORRY I MEANT TOY YODA'S. SORRY A 17 YEAR OLD IS MAKING THIS.</p>
+  <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED. AD: Come to Feathered meats! (our icecream machine actully works.)</p>
 </body>
 
 
