--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>The Eclipse Database</title>
   </head>
-<body style="background-color:grey;">
+<body>
   <h1 style= "font-size: 60px;"> Welcome Silverwings to your new database.</h1>
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
