--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <p>STAND BY...STAND BY...</p>
 <h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
   <p style="color:green;">Comfirmed as Silverwings...DATABASE BUILDING MODE STARTED. </p>
+
+  <br>
+  <br>
+
+  <a href="/about">Creature database</a>
 </body>
 
 
