--- a/about.html
+++ b/about.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About The Eclipse Database</title>
+  </head>
+<body>
+  <h1 style= "font-size: 100px;"> Welcome Silverwings to the about page.</h1>
+  <p>STAND BY...STAND BY...</p>
+<h2 style="color:red;">Authorization bio required. SCANNING. HOLD STILL PLEASE.</h2>
+  <p style="color:green;">Comfirmed as Silverwings...DATABASE ABOUT MODE STARTED. </p>
+  <br>
+  <br>
+  <br>
+  <p>This is the Eclipse Database. Here you will find info regarding the places, flora, and fauna of the world as well as anomoly and containment files. Most will be passcode or bio-scan protected. Any form of hacking will not be tolerated and you will be put on an arrest board.</p>
 
+
+</body>
+
+
+</html>
