--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <br>
   <br>
   <br>
-  <p>This is the Eclipse Database. Here you will find info regarding the places, flora, and fauna of the world as well as anomoly and containment files. Most will be passcode or bio-scan protected. Any form of hacking will not be tolerated and you will be put on an arrest board.</p>
+  <p>This is the Eclipse Database. Here you will find info regarding the places, flora, and fauna of the world as well as anomoly and containment files. Most will be passcode or bio-scan protected. Any form of hacking will not be tolerated and you will be put on an arrest board and brought in for questioning. Please return to former page for DATAFORM links.</p>
 
 
 </body>
