--- a/ajax.html
+++ b/ajax.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>AJAX</title>
+  </head>
+<body>
+  <h1 style= "font-size: 73px;">AJAX</h1>
+  <p>STAND BY...STAND BY...</p>
+<h2 style="color:red;">THIS IS AJAX</h2>
+  <p style="color:green;">WELCOME TO AJAX</p>
+</body>
 
+
+</html>
